examples/test/testpolicy11161.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11161
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key27: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value25
      podSelector:
        matchLabels:
          key40: value13
          key30: value26
          key18: value43
